# oxc-react-compiler

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  UPSTREAM_VERSION.md  package-lock.json  package.json
.analysis/: bfs-range-root-cause.md  (+4 more)
.todo/: docs.md  (+53 more)
crates/oxc_react_compiler/: Cargo.toml
crates/oxc_react_compiler/benches/: compiler.rs
crates/oxc_react_compiler/examples/: dump_output.rs
crates/oxc_react_compiler/src/: debug_dump.rs  error.rs  lib.rs
crates/oxc_react_compiler/src/entrypoint/: mod.rs  options.rs  pipeline.rs  program.rs
crates/oxc_react_compiler/src/hir/: build.rs  compute_unconditional_blocks.rs  environment.rs  globals.rs  mod.rs  object_shape.rs  types.rs
crates/oxc_react_compiler/src/inference/: aliasing_effects.rs  analyse_functions.rs  collect_hoistable_property_loads.rs  collect_optional_chain_dependencies.rs  infer_mutation_aliasing_effects.rs  infer_mutation_aliasing_ranges.rs  infer_reactive_places.rs  infer_types.rs  mod.rs  rewrite_instruction_kinds.rs
crates/oxc_react_compiler/src/optimization/: constant_propagation.rs  dead_code_elimination.rs  inline_iife.rs  merge_consecutive_blocks.rs  mod.rs  name_anonymous_functions.rs  optimize_for_ssr.rs  optimize_props_method_calls.rs  outline_functions.rs  outline_jsx.rs  prune_maybe_throws.rs  prune_temporary_lvalues.rs
crates/oxc_react_compiler/src/reactive_scopes/: align_scopes.rs  build_reactive_function.rs  codegen.rs  derive_minimal_dependencies.rs  infer_reactive_scope_variables.rs  merge_scopes.rs  mod.rs  propagate_dependencies.rs  prune_scopes.rs  scope_dependency_utils.rs
crates/oxc_react_compiler/src/ssa/: eliminate_redundant_phi.rs  enter_ssa.rs  mod.rs
crates/oxc_react_compiler/src/utils/: disjoint_set.rs  mod.rs  ordered_map.rs
crates/oxc_react_compiler/src/validation/: assert_valid_mutable_ranges.rs  assert_well_formed_break_targets.rs  drop_manual_memoization.rs  function_context.rs  mod.rs  validate_blocklisted_imports.rs  validate_context_variable_lvalues.rs  validate_exhaustive_dependencies.rs  validate_hooks_usage.rs  validate_locals_not_reassigned_after_render.rs  validate_no_capitalized_calls.rs  validate_no_derived_computations_in_effects.rs  validate_no_eval.rs  validate_no_freezing_known_mutable_functions.rs  validate_no_global_reassignment.rs  validate_no_impure_functions_in_render.rs  validate_no_jsx_in_try.rs  validate_no_mutation_after_freeze.rs  validate_no_ref_access_in_render.rs  validate_no_set_state_in_effects.rs  validate_no_set_state_in_render.rs  validate_no_unsupported_nodes.rs  validate_preserved_manual_memoization.rs  validate_static_components.rs  validate_use_memo.rs
crates/oxc_react_compiler/tests/: codegen_validation_tests.rs  conformance_tests.rs  debug_ir_test.rs  error_diagnostic_tests.rs  fixture_tests.rs  fuzz_hir.rs  pass_unit_tests.rs  per_pass_snapshots.rs  snapshot_tests.rs
crates/oxc_react_compiler/tests/fixtures/: arrow-component.tsx  basic-component.tsx  component-with-children.tsx  component-with-conditional.tsx  component-with-derived.tsx  exported-default.tsx  hook-with-state.tsx  multiple-components.tsx  non-component.ts  use-no-memo.tsx
crates/oxc_react_compiler/tests/snapshots/: codegen_validation_tests__semantic_arrow_component.snap  codegen_validation_tests__semantic_conditional_component.snap  codegen_validation_tests__semantic_derived_values.snap  codegen_validation_tests__semantic_hook_with_state.snap  codegen_validation_tests__semantic_multiple_components.snap  codegen_validation_tests__semantic_simple_component.snap  error_diagnostic_tests__diag_capitalized_calls.snap  error_diagnostic_tests__diag_context_variable_lvalues.snap  error_diagnostic_tests__diag_derived_computations_in_effects.snap  error_diagnostic_tests__diag_effect_dependency_missing.snap  error_diagnostic_tests__diag_hooks_in_logical.snap  error_diagnostic_tests__diag_hooks_in_ternary.snap  error_diagnostic_tests__diag_jsx_in_try_enabled.snap  error_diagnostic_tests__diag_locals_reassigned_after_render.snap  error_diagnostic_tests__diag_memo_dependency_missing.snap  error_diagnostic_tests__diag_memoization_preservation.snap  error_diagnostic_tests__diag_ref_access_in_render.snap  error_diagnostic_tests__diag_set_state_in_effects.snap  error_diagnostic_tests__diag_set_state_in_render.snap  error_diagnostic_tests__diag_use_memo_async.snap  error_diagnostic_tests__diag_use_memo_missing_deps.snap  fixture_tests__arrow-component_tsx.snap  fixture_tests__basic-component_tsx.snap  fixture_tests__component-with-children_tsx.snap  fixture_tests__component-with-conditional_tsx.snap  fixture_tests__component-with-derived_tsx.snap  fixture_tests__exported-default_tsx.snap  fixture_tests__hook-with-state_tsx.snap  fixture_tests__multiple-components_tsx.snap  fixture_tests__use-no-memo_tsx.snap  per_pass_snapshots__basic_memoization.snap  per_pass_snapshots__conditional_rendering.snap  per_pass_snapshots__destructured_props.snap  per_pass_snapshots__hook_dependencies.snap  per_pass_snapshots__jsx_children.snap  per_pass_snapshots__multiple_scopes.snap  snapshot_tests__arrow_function_component.snap  snapshot_tests__component_props_destructuring.snap  snapshot_tests__component_with_conditional.snap  snapshot_tests__component_with_derived_value.snap  (+8 more)
crates/oxc_react_compiler_lint/: Cargo.toml
crates/oxc_react_compiler_lint/benches/: lint.rs
crates/oxc_react_compiler_lint/src/: lib.rs
crates/oxc_react_compiler_lint/src/rules/: globals.rs  incompatible_library.rs  mod.rs  no_capitalized_calls.rs  no_deriving_state_in_effects.rs  no_jsx_in_try.rs  no_ref_access_in_render.rs  no_set_state_in_effects.rs  no_set_state_in_render.rs  purity.rs  rules_of_hooks.rs  static_components.rs  tier2.rs  use_memo_validation.rs
crates/oxc_react_compiler_lint/src/utils/: hook_detection.rs  mod.rs
crates/oxc_react_compiler_lint/tests/: lint_tests.rs
napi/react-compiler/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
napi/react-compiler/src/: lib.rs
napi/react-compiler/vite-plugin/: index.ts  options.ts
(+115 files in other folders)
