[package]
name = "oxc_react_compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_diagnostics.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true

rustc-hash.workspace = true
bitflags.workspace = true
log.workspace = true

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
proptest.workspace = true
ureq = { version = "3", features = ["json"] }
serde_json = "1"

[[bench]]
name = "compiler"
harness = false
