[package]
name = "oxc_react_compiler_lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
oxc_react_compiler.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_diagnostics.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true

rustc-hash.workspace = true

[[bench]]
name = "lint"
harness = false

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
