[package]
name = "oxc-react-compiler-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
oxc_react_compiler.workspace = true
oxc_react_compiler_lint.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
napi.workspace = true
napi-derive.workspace = true
mimalloc = { version = "0.1", default-features = false }

[build-dependencies]
napi-build = "2"
